# axis

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.claude/: launch.json
.github/workflows/: ci.yml  gui-release.yml  nightly.yml  release.yml
benches/: Cargo.toml  success_metrics.rs
crates/axis-cli/: Cargo.toml
crates/axis-cli/src/: main.rs
crates/axis-core/: Cargo.toml
crates/axis-core/src/: audit.rs  bench.rs  lib.rs  opa.rs  policy.rs  types.rs
crates/axis-daemon/: Cargo.toml
crates/axis-daemon/src/: health.rs  ipc.rs  main.rs  policy_watch.rs  sandbox_mgr.rs
crates/axis-gateway/: Cargo.toml
crates/axis-gateway/src/: events.rs  handlers.rs  lib.rs  router.rs
crates/axis-gateway/tests/: api_integration.rs
crates/axis-gpu/: Cargo.toml
crates/axis-gpu/src/: api_filter.rs  lib.rs  protocol.rs  transport.rs  vram_quota.rs  worker_mgr.rs
crates/axis-proxy/: Cargo.toml
crates/axis-proxy/src/: identity.rs  lib.rs  proxy.rs  secrets.rs
crates/axis-proxy/src/l7/: inference.rs  mod.rs  rest.rs  tls.rs
crates/axis-proxy/tests/: proxy_opa_integration.rs
crates/axis-pty/: Cargo.toml
crates/axis-pty/src/: lib.rs  session.rs  unix.rs  windows.rs
crates/axis-router/: Cargo.toml
crates/axis-router/src/: backend.rs  config.rs  lib.rs  models.rs  providers.rs  scheduler.rs  server_mgr.rs  smart_routing.rs  token_budget.rs
crates/axis-safety/: Cargo.toml
crates/axis-safety/src/: leak_detect.rs  lib.rs  patterns.rs  validate.rs
crates/axis-sandbox/: Cargo.toml
crates/axis-sandbox/src/: lib.rs  sandbox.rs  workspace.rs
crates/axis-sandbox/src/linux/: landlock.rs  mod.rs  netns.rs  seccomp.rs
crates/axis-sandbox/src/macos/: mod.rs  profile.rs
crates/axis-sandbox/src/windows/: acl.rs  appcontainer.rs  etw.rs  job_object.rs  mod.rs  restricted.rs
data/: sandbox-policy.rego
docs/: agent-sandbox-landscape.md  agent-state-containment.md  gui-implementation-plan.md  implementation-plan.md
e2e/agents/: install_agents.ps1  install_agents.sh  test_agents.ps1  test_agents.sh  test_installed_agents.sh
e2e/linux/: test_e2e_daemon.sh  test_embedded_llm.sh  test_hip_remote.sh  test_hip_sandbox.py  test_sandbox.sh  vm_test.sh
gui/: build-all.sh
gui/linux/: Cargo.toml
gui/linux/data/: org.axis.Desktop.desktop
gui/linux/src/: main.rs
gui/macos/: Package.swift
gui/macos/AXIS/: AppDelegate.swift
gui/shared/: index.html  package-lock.json  package.json  vite.config.ts
gui/shared/src/: App.tsx  styles.css
gui/shared/src/api/: client.ts
gui/shared/src/components/: AgentLauncher.tsx  SandboxList.tsx  SecurityMonitor.tsx  Sidebar.tsx  Terminal.tsx
gui/windows/AXIS/: AXIS.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
policies/: claude-code-macos.yaml  claude-code.yaml  coding-agent.yaml  gpu-agent.yaml  minimal.yaml
policies/agents/: base-deny.yaml  claude-code-ssh.yaml  claude-code.yaml  codex.yaml  cursor-agent.yaml  gemini-cli.yaml  hermes.yaml  ironclaw.yaml  nanoclaw.yaml  openclaw.yaml  opencode.yaml  zeroclaw.yaml
