[workspace]
resolver = "2"
members = [
    "crates/axis-core",
    "crates/axis-safety",
    "crates/axis-sandbox",
    "crates/axis-proxy",
    "crates/axis-router",
    "crates/axis-gpu",
    "crates/axis-daemon",
    "crates/axis-cli",
    "benches",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ROCm/axis"

[workspace.dependencies]
# Internal crates
axis-core = { path = "crates/axis-core" }
axis-safety = { path = "crates/axis-safety" }
axis-sandbox = { path = "crates/axis-sandbox" }
axis-proxy = { path = "crates/axis-proxy" }
axis-router = { path = "crates/axis-router" }
axis-gpu = { path = "crates/axis-gpu" }
axis-daemon = { path = "crates/axis-daemon" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Policy engine
regorus = "0.2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto
sha2 = "0.10"

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Network
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"
rustls-pemfile = "2"

# Pattern matching (leak detection)
aho-corasick = "1"
regex = "1"

# Filesystem watching
notify = "7"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Linux syscalls
nix = { version = "0.29", features = ["process", "sched", "signal", "user", "net", "mount"] }
libc = "0.2"

# Temp directories
tempfile = "3"

# LLM inference (llama.cpp via Rust bindings)
llama-cpp-2 = "0.1"

# HuggingFace model download
indicatif = "0.17"
