[package]
name = "axis-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "success-metrics"
path = "success_metrics.rs"

[dependencies]
axis-core = { workspace = true }
axis-sandbox = { workspace = true }
axis-proxy = { workspace = true }
axis-safety = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
