[package]
name = "axis-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP + WebSocket gateway for AXIS daemon (GUI and API clients)"

[dependencies]
axis-core = { workspace = true }

tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
