[package]
name = "axis-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axis-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
