[package]
name = "axis-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axis-core = { workspace = true }
axis-safety = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
